[gd_scene load_steps=4 format=3 uid="uid://d4g7iin5x7648"]

[ext_resource type="Script" uid="uid://besvbjgt2xtix" path="res://cards/menu_card/menu_card.gd" id="1_f806l"]
[ext_resource type="PackedScene" uid="uid://dlpbxdm81neil" path="res://cards/card_visuals.tscn" id="2_atmdt"]
[ext_resource type="Resource" uid="uid://dfgkvy2yw1a3e" path="res://cards/AttackCard/attack_card.tres" id="2_fdvp4"]

[node name="MenuCard" type="CenterContainer"]
offset_right = 126.0
offset_bottom = 178.0
size_flags_horizontal = 6
size_flags_vertical = 4
script = ExtResource("1_f806l")
card_data = ExtResource("2_fdvp4")

[node name="Visuals" parent="." instance=ExtResource("2_atmdt")]
layout_mode = 2

[connection signal="gui_input" from="Visuals" to="." method="_on_visuals_gui_input"]
[connection signal="mouse_entered" from="Visuals" to="." method="_on_visuals_mouse_entered"]
[connection signal="mouse_exited" from="Visuals" to="." method="_on_visuals_mouse_exited"]
